--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Spartix</h1>
-      <h2 class="project-tagline">x86 and AMD64 Operating System written in C</h2>
+      <h2 class="project-tagline">x86 and AMD64 Operating System written in C++</h2>
       <a href="https://github.com/PedroFalcato/Spartix" class="btn">View on GitHub</a>
       <a href="https://github.com/PedroFalcato/Spartix/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/PedroFalcato/Spartix/tarball/master" class="btn">Download .tar.gz</a>
@@ -31,6 +31,8 @@
 <ul>
 <li>An i686-elf cross compiler (Instructions can be found at <strong><a href="http://wiki.osdev.org/GCC_Cross_Compiler">http://wiki.osdev.org/GCC_Cross_Compiler</a></strong> )</li>
 <li>Grub 2 installed on your machine (Doesn't matter if you boot your system using Grub 2, you just need the utilities)</li>
+<li>POSIX shell ( Bash is the most common, but things like Cygwin and MSYS will work too)</li>
+<li>Unix like environment</li>
 </ul>
 
       <footer class="site-footer">
