Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
 <a id="spartix" class="anchor" href="#spartix" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Spartix</h1>
 
 <h2>
-<a id="an-x86amd64-operating-system" class="anchor" href="#an-x86amd64-operating-system" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>An x86/AMD64 Operating system</h2>
+<a id="an-x86x86_64-operating-system" class="anchor" href="#an-x86x86_64-operating-system" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>An x86/x86_64 Operating system</h2>
+
+<p>Spartix is a Unix-like operating system, designed to run on x86 and x86_64. It's designed to comply to the POSIX standard, implement all the standard Unix API's, while learning from the mistakes UNIX did.
+It folows the System V ABI. All the system calls are exposed under the interrupt vector 0x80, like Linux.
+Spartix's purpose is to be function-heavy, and light-weight when possible. Bloat is a NOT a necessary evil for functionality, as software can be very functional, while remaining light-weight (something like GIMP comes to my mind, compared to Adobe Photoshop). Spartix will never turn into a glibc or a systemd, as those pieces of software add unnecessary crap to its binary. Spartix doesn't try to fight and say that it is "very light-weight" or "super-quick". It affirms that it is an Operating System that won't implement, for example GUI's, because then the kernel would be "more than 20 KiB". </p>
 
 <h2>
 <a id="in-order-to-build-spartix-you-need" class="anchor" href="#in-order-to-build-spartix-you-need" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>In order to build Spartix, you need:</h2>
